Set text for calculator to wrap on smaller devices, fix bug with +/- button

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,8 @@ body {
 .calculator-output {
   color: rgb(104, 103, 167);
   font-size: 38px;
-  float: right;
+  text-align: end;
+  word-break: break-all;
 }
 
 .btns-container {
